--- a/css/common.css
+++ b/css/common.css
@@ -9,9 +9,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 body {
     font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
     min-width: 300px;
+
 }
 
 .header-photo {
@@ -24,6 +25,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-attachment: fixed;
 
     height: 80vh;
     margin-top: 10vh;
@@ -36,6 +38,7 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
+    background-color: rgba(0, 0, 0, 0.28);
 }
 
 .header-photo__text-header {
@@ -50,27 +53,26 @@ body {
 }
 
 .header-photo__text-header-big {
-    font-size: 1.2em;
-    line-height: 2em;
-    letter-spacing: 0.4em;
+    font-size: 5rem;
+    line-height: 5rem;
+    letter-spacing: 0.6rem;
 }
 
 .header-photo__text-header-big_title {
-    font-size: 3em;
-    line-height: 2em;
-    font-weight: bold;
-    letter-spacing: 0.5em;
+    font-size: 7rem;
+    letter-spacing: 0.5rem;
+    margin-bottom: 3rem;
 }
 
 .header-photo__text-header-small {
-    font-size: 0.7em;
-    line-height: 1em;
-    letter-spacing: 0.5em;
+    font-size: 1rem;
+    letter-spacing: 0.5rem;
 }
 
 .header-photo__text-subscription {
     display: table-row;
-    font-size: 0.8em;
+    font-size: 1rem;
+    line-height: 1.5rem;
 }
 
 .header-photo__text-subscription-content {
@@ -83,32 +85,30 @@ body {
 }
 
 .header-photo_picture_section-1-faroe {
-    background-image: url(../images/section-1-faroe.jpeg);
+    background-image: url(../images/section-1-faroe-1680.jpeg);
     margin-top: 0vh;
-    /*background-position: -200px 0;*/
 }
 
 .header-photo_picture_section-2-flight-and-road {
     background-image: url(../images/section-2-flight-and-road.jpeg);
-    /*background-position: -200px 0;*/
 }
 
 .header-photo_picture_section-3-weather {
     background-image: url(../images/section-3-weather.jpeg);
-    /*background-position: -200px 0;*/
 }
 
 .section-text{
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto !important;
     position: relative;
 }
 
 .comment {
-    font-size: 0.8em;
-    line-height: 1.3em;
+    text-align: justify;
+    font-size: 1rem;
+    line-height: 1.3rem;
     border-left: 5px solid #f9f0f0;
-    max-width: 400px;
+    max-width: 470px;
     width: 35%;
     margin: 0 auto;
     float: right;
@@ -133,32 +133,39 @@ body {
 
 .main-text {
     width: 55%;
-    max-width: 600px;
+    max-width: 730px;
     margin-left: 40px;
     margin-right: 10%;
 }
 
 .main-text__dropcap {
     color: #000;
-    font-size: 3.5em;
+    font-size: 3.5rem;
     font-weight: bold;
+    line-height: 0;
 }
 
 .main-text__paragraph {
     margin-top: 5vh;
+    text-align: justify;
+}
+
+
+
+@media screen and (max-width: 1024px) {
+    .body{
+        font-size: 2rem;
+    }
 }
 
 
 /*
     НЕ получится использовать модификаторы получается по бем ибо тока через js
 */
-@media screen and (max-width: 1280px) {
-
-}
 
 @media screen and (max-width: 1024px) {
     .comment {
-        max-width: 360px;
+        max-width: 470px;
         margin: auto;
         float: none;
         clear: none;
@@ -169,14 +176,72 @@ body {
         width: 100%;
         margin: 5% auto;
     }
+
+    body{
+        font-size: 1.2rem;
+    }
+
+    .header-photo {
+        background-attachment: initial;
+    }
+
+    .header-photo__text-header-big{
+        font-size: 4rem;
+        line-height: 4rem;
+    }
+
+    .header-photo__text-header-big_title {
+        font-size: 5rem;
+        margin-bottom: 3rem;
+    }
+
+    .header-photo__text-header-small {
+        font-size: 0.8rem;
+    }
+
+    .header-photo__text-subscription {
+        font-size: 0.8rem;
+    }
+
+
 }
 
-@media screen and (max-width: 768px) {
+/* Правило для экранов с высокой плотностью пикселов*/
+@media (-webkit-min-device-pixel-ratio: 2) {
+    .header-photo_picture_section-1-faroe {
+        background-image: url(../images/section-1-faroe-3360.jpeg);
+        margin-top: 0vh;
+    }
+}
+
+@media screen and (max-width: 800px) {
     .main-text__paragraph{
         margin-top: 5vh;
         margin-left: 5%;
         margin-right: 5%;
         max-width: 100%;
+    }
+
+    /*.header-photo__text-header-small{*/
+        /*font-size: 2rem;*/
+    /*}*/
+
+    .header-photo_picture_section-1-faroe {
+        background-image: url(../images/section-1-faroe-pad-1000.jpeg);
+        margin-top: 0vh;
+    }
+
+    body{
+        font-size: 1.2rem;
+        line-height: 1.9rem;
+    }
+}
+
+/* Правило для экранов с высокой плотностью пикселов*/
+@media (max-width: 800px) and (-webkit-min-device-pixel-ratio: 2) {
+    .header-photo_picture_section-1-faroe {
+        background-image: url(../images/section-1-faroe-pad-2000.jpeg);
+        margin-top: 0vh;
     }
 }
 
@@ -185,18 +250,48 @@ body {
         margin-top: 8vh;
         margin-left: 5%;
         margin-right: 5%;
-        width: 100%;
+        width: 90%;
     }
 
     .main-text__paragraph{
         margin-top: 8vh;
     }
 
-    .header-photo__text-header-big_title{
-        font-size: 2em;
+    .header-photo_picture_section-1-faroe {
+        background-image: url(../images/section-1-faroe-mobile-700.jpeg);
+        margin-top: 0vh;
     }
+
+    .header-photo__text-header-big{
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+
+    .header-photo__text-header-big_title {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    .header-photo__text-header-small {
+        font-size: 0.7rem;
+    }
+
+    .header-photo__text-subscription {
+        font-size: 0.7rem;
+        line-height: 1.1rem;
+    }
+
+    body{
+        font-size: 1.1rem;
+        line-height: 1.7rem;
+    }
+
 }
 
-@media screen and (max-width: 320px) {
-
+/* Правило для экранов с высокой плотностью пикселов*/
+@media (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+    .header-photo_picture_section-1-faroe {
+        background-image: url(../images/section-1-faroe-mobile-1400.jpeg);
+        margin-top: 0vh;
+    }
 }
