--- a/task2/css/app.css
+++ b/task2/css/app.css
@@ -184,3 +184,16 @@ body {
 .door-riddle__button_pressed {
     background-color: #F3E5D9;
 }
+
+
+/* my classes*/
+.door-riddle__wood{
+    background-image: url(../img/wood.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 280px;
+    height: 80px;
+    position: absolute;
+    top: 200px;
+    left: 50px;
+}
