--- a/task2/css/app.css
+++ b/task2/css/app.css
@@ -170,6 +170,14 @@ body {
     height: 100%;
 }
 
+.door1-riddle {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    flex-wrap: wrap;
+}
+
 .door-riddle__button {
     width: 64px;
     height: 64px;
@@ -185,17 +193,59 @@ body {
     background-color: #F3E5D9;
 }
 
+.door-riddle__wood-wrap{
+    width: 100%;
+}
 
 /* my classes*/
 .door-riddle__wood{
-    background-image: url(../img/wood.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 280px;
-    height: 80px;
-    position: absolute;
-    top: 200px;
+    /*background-image: url(../img/wood.jpg);*/
+    /*background-size: contain;*/
+    /*background-repeat: no-repeat;*/
+    width: 300px;
+    height: 60px;
+    /*position: absolute;*/
+    /*top: 200px;*/
+    /*left: 50px;*/
+    background-color: #fff;
+    border: 1px solid #000000;
+    border-radius: 60px;
+    position: relative;
     left: 50px;
+
+}
+
+.door-riddle__wood-button{
+    width: 46px;
+    height: 46px;
+    border-radius: 52px;
+    background-color: #000000;
+    border: 1px solid #ffffff;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, .4);
+    top: 6px;
+    position: relative;
+    margin-left: 8px;
+}
+
+
+.door-riddle__wood-button-wrap{
+    flex-direction: row;
+    justify-content: space-between;
+    display: none;
+}
+
+.door-riddle__wood-button-wrap_visible{
+    display: flex;
+}
+
+.door-riddle__wood-button-target{
+    height: 58px;
+    width: 58px;
+    right: 1px;
+    top: 1px;
+    background-color: rgba(243, 3, 0, 0.36);
+    position: relative;
+    border-radius: 64px;
 }
 
 .door-riddle__alarm{
@@ -209,7 +259,7 @@ body {
     /*transition: background-color .3s;*/
 }
 
-@keyframes my-custom-name {
+@keyframes alarm-animation {
     /* from, to = 0%, 100% */
     from {
         background-color: rgba(0, 0, 0, 255);
@@ -229,7 +279,7 @@ body {
 {
 
     /* вызов анимации по имени */
-    animation-name: my-custom-name;
+    animation-name: alarm-animation;
 
     /* параметр: продолжительность */
     animation-duration: 0.75s;
