--- a/task2/css/app.css
+++ b/task2/css/app.css
@@ -221,8 +221,6 @@ body {
     height: 46px;
     border-radius: 52px;
     background-color: #000000;
-    border: 1px solid #ffffff;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, .4);
     top: 6px;
     position: relative;
     margin-left: 8px;
@@ -236,6 +234,19 @@ body {
 
 .door-riddle__wood-buttons-wrap_visible {
     display: flex;
+}
+
+.door-riddle__wood-button_right{
+    -o-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+
+    -o-transform: translateX(100px);
+    -ms-transform: translateX(100px);
+    -moz-transform: translateX(100px);
+    -webkit-transform: translateX(100px);
+    transform: translateX(240px);
 }
 
 .door-riddle__wood-button-target {
@@ -288,49 +299,6 @@ body {
 
 }
 
-.door-riddle__circle1 {
-    height: 300px;
-    width: 300px;
-    border-radius: 300px;
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-    position: relative;
-}
-
-.door-riddle__circle0 {
-    height: 320px;
-    width: 320px;
-    border-radius: 300px;
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-    position: relative;
-}
-
-.door-riddle__circle2 {
-    height: 100px;
-    width: 100px;
-    border-radius: 100px;
-
-    background-color: white;
-    position: relative;
-}
-
-.door-riddle2__button {
-    width: 64px;
-    height: 64px;
-    border-radius: 64px;
-    background-color: #583319;
-    border: 1px solid #F3E9E0;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, .4);
-    transition: background-color .3s;
-    position: relative;
-}
 
 /*box*/
 
