--- a/task2/css/slider.css
+++ b/task2/css/slider.css
@@ -15,6 +15,9 @@
     top: 6px;
     position: relative;
     margin-left: 8px;
+
+    will-change: transform;
+    backface-visibility: hidden;
 }
 
 .slider_invisible{
