--- a/task2/css/app.css
+++ b/task2/css/app.css
@@ -114,7 +114,7 @@ body {
     bottom: 0;
     top: 0;
 
-    background-color: rgba(0, 0, 0, .3);
+    background-color: rgba(0,0,0,.3);
     transition: opacity .3s;
 
     display: flex;
@@ -158,7 +158,6 @@ body {
 .popup__content_level_2 {
     /* Можно поставить какую-нибудь свою картинку двери на бек */
 }
-
 .popup__content_level_3 {
     background-image: url(../img/door__box.png);
     background-size: contain;
@@ -169,4 +168,19 @@ body {
     align-items: center;
     justify-content: space-around;
     height: 100%;
+}
+
+.door-riddle__button {
+    width: 64px;
+    height: 64px;
+    border-radius: 64px;
+    background-color: #583319;
+    border: 1px solid #F3E9E0;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, .4);
+
+    transition: background-color .3s;
+}
+
+.door-riddle__button_pressed {
+    background-color: #F3E5D9;
 }
