--- a/task2/css/door2.css
+++ b/task2/css/door2.css
@@ -43,7 +43,7 @@
     background-color: black;
 }
 
-.door2-riddle-monitor{
+.door2-riddle__monitor{
     height: 100px;
     width: 100px;
     border-radius: 50px;
