--- a/task2/css/app.css
+++ b/task2/css/app.css
@@ -159,7 +159,7 @@ body {
     /* Можно поставить какую-нибудь свою картинку двери на бек */
 }
 .popup__content_level_3 {
-    background-image: url(../img/door__box.png);
+    background-image: url(../img/yanja.jpg);
     background-size: contain;
 }
 
